--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 			<p>More openness in the research process encourages participation and engagement.</p>
 			<br>
 			<ul>
-				<li>Open access … to research articles</li>
-				<li>Open data … facilitates the re-use of data</li>
-				<li>Open source … enables use and development of applications</li>
-				<li>Open science … fosters the accessibility of research processes</li>
+				<li>Open <span style="color:#FF7F00">access</span> … to research articles</li>
+				<li>Open <span style="color:#FF7F00">data</span> … facilitates the re-use of data</li>
+				<li>Open <span style="color:#FF7F00">source</span> … enables use and development of applications</li>
+				<li>Open <span style="color:#FF7F00">science</span> … fosters the accessibility of research processes</li>
 			</ul>
 			</section>	
 
@@ -106,15 +106,15 @@
 			<h2>The problem is …</h2>
 			<blockquote style="font-size:110%">“Scientists do not seem to distinguish between analysis and communication. The last exploratory graph becomes explanatory.”</blockquote>
 			<p style="text-align:right; font-size: 90%;"Moritz Stefaner, Data Stories Episode 37</p>
-			<br>
-			<table><tr>
-			<td>
-			<p style="font-size:90%">Scientists lack the mind<br> & skill sets to communicate<br> data visually</p>
-			</td>
-			<td>	
-			<img src="images/100percentEXCEL.png" width="500">
-			</td>
-			</tr></table>
+			
+			<div style="width: 100%; overflow: hidden;">
+			<div style="width: 450px; float: left;">
+			<br><br><p>Scientists lack the mind & skill sets to communicate data visually</p>
+			</div>
+			<div style="margin-left: 450px;">
+			<img src="images/100percentEXCEL.png" width="630">
+			</div>
+			</div>
 			</section>	
 			
 			<section>
@@ -122,11 +122,11 @@
 			<p>Literacy refers to the ability to read for knowledge, write coherently and think critically about printed material.</p>
 			<br>
 			<ul>
-				<li>Data literacy … to make use of quantitative information</li>
-				<li>Statistical literacy … to make sense of statistical information</li>
-				<li>Scientific literacy …  to evaluate the quality of scientific information</li>
-				<li>Visual literacy … to construct meaning from visual images</li>
-				<li>Media literacy … to apply literacy skills to media and technology messages</li>
+				<li><span style="color:#FF7F00">Data</span> literacy … to make use of quantitative information</li>
+				<li><span style="color:#FF7F00">Statistical</span> literacy … to make sense of statistical information</li>
+				<li><span style="color:#FF7F00">Scientific</span> literacy …  to evaluate the quality of scientific information</li>
+				<li><span style="color:#FF7F00">Visual</span> literacy … to construct meaning from visual images</li>
+				<li><span style="color:#FF7F00">Media</span> literacy … to apply literacy skills to media and technology messages</li>
 			</ul>
 			</section>				
 
@@ -143,13 +143,13 @@
 			
 			<section>
 			<h2>Ready, willing and able to engage with the public</h2>
-				<p>Readiness … why researchers should engage</p>
+				<p><span style="color:#FF7F00">Readiness</span> … why researchers should engage</p>
 				<p>&#8594; change in job description</p>
 				<br>
-				<p>Willingness … what it brings for researchers to engage</p>
+				<p><span style="color:#FF7F00">Willingness</span> … what it brings for researchers to engage</p>
 				<p>&#8594; change in mind set</p>
 				<br>
-				<p>Ability … how they can engage visually</p>
+				<p><span style="color:#FF7F00">Ability</span> … how they can engage visually</p>
 				<p>&#8594; change in skill set</p>
 			</ul>
 			</section>				
