--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<meta charset="utf-8">
 		<title>Graphical Web 2014</title>
 		<meta name="description" content="Data visualisation at the nexus of science and the public">
-		<meta name="author" content="Nikola Sander & Ramon Bauer">
 		
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -50,10 +49,12 @@
 				<br>
 				<h4>The Graphical Web Conference, August 2014</h4>
 				<h4>Slides: <a href="http://www.nikolasander.com/graphicalweb" target="_blank">nikolasander.com/graphicalweb</a></h4>
+			
+				<aside class="notes">some notes. Hidden in presentation but visible on the screen, hit 's' on keyboard</aside>
 			</section>
 
 			<section data-background="images/circular-world.png">	
-			<h2 style="text-align:center; color:#F4EBCE;background-color: rgba(0, 0, 0, 0.5)">Science communication<br> & data visualisation</h2>
+			<h2 style="text-align:center; color:#F4EBCE;background-color:rgba(0, 0, 0, 0.5)">Science communication<br> & data visualisation</h2>
 			</section>	
 
 			<section data-background="images/text-tabelle.jpg">		
@@ -81,10 +82,10 @@
 			<p>More openness in the research process encourages participation and engagement.</p>
 			<br>
 			<ul>
-				<li>Open <span style="color:#FF7F00">access</span> … to research articles</li>
-				<li>Open <span style="color:#FF7F00">data</span> … facilitates the re-use of data</li>
-				<li>Open <span style="color:#FF7F00">source</span> … enables use and development of applications</li>
-				<li>Open <span style="color:#FF7F00">science</span> … fosters the accessibility of research processes</li>
+				<li>Open <em>access</em> … to research articles</li>
+				<li>Open <em>data</em> … facilitates the re-use of data</li>
+				<li>Open <em>source</em> … enables use and development of applications</li>
+				<li>Open <em>science</em> … fosters the accessibility of research processes</li>
 			</ul>
 			</section>	
 
@@ -108,12 +109,12 @@
 			<p style="text-align:right; font-size: 90%;"Moritz Stefaner, Data Stories Episode 37</p>
 			
 			<div style="width: 100%; overflow: hidden;">
-			<div style="width: 450px; float: left;">
-			<br><br><p>Scientists lack the mind & skill sets to communicate data visually</p>
-			</div>
-			<div style="margin-left: 450px;">
-			<img src="images/100percentEXCEL.png" width="630">
-			</div>
+				<div style="width: 450px; float: left;">
+				<br><br><p>Scientists lack the mind & skill sets to communicate data visually</p>
+				</div>
+				<div style="margin-left: 450px;">
+				<img src="images/100percentEXCEL.png" width="630">
+				</div>
 			</div>
 			</section>	
 			
@@ -122,11 +123,11 @@
 			<p>Literacy refers to the ability to read for knowledge, write coherently and think critically about printed material.</p>
 			<br>
 			<ul>
-				<li><span style="color:#FF7F00">Data</span> literacy … to make use of quantitative information</li>
-				<li><span style="color:#FF7F00">Statistical</span> literacy … to make sense of statistical information</li>
-				<li><span style="color:#FF7F00">Scientific</span> literacy …  to evaluate the quality of scientific information</li>
-				<li><span style="color:#FF7F00">Visual</span> literacy … to construct meaning from visual images</li>
-				<li><span style="color:#FF7F00">Media</span> literacy … to apply literacy skills to media and technology messages</li>
+				<li><em>Data</em> literacy … to make use of quantitative information</li>
+				<li><em>Statistical</em> literacy … to make sense of statistical information</li>
+				<li><em>Scientific</em> literacy …  to evaluate the quality of scientific information</li>
+				<li><em>Visual</em> literacy … to construct meaning from visual images</li>
+				<li><em>Media</em> literacy … to apply literacy skills to media and technology messages</li>
 			</ul>
 			</section>				
 
@@ -143,17 +144,16 @@
 			
 			<section>
 			<h2>Ready, willing and able to engage with the public</h2>
-				<p><span style="color:#FF7F00">Readiness</span> … why researchers should engage</p>
+				<p><em>Readiness</em> … why researchers should engage</p>
 				<p>&#8594; change in job description</p>
 				<br>
-				<p><span style="color:#FF7F00">Willingness</span> … what it brings for researchers to engage</p>
+				<p><em>Willingness</em> … what it brings for researchers to engage</p>
 				<p>&#8594; change in mind set</p>
 				<br>
-				<p><span style="color:#FF7F00">Ability</span> … how they can engage visually</p>
+				<p><em>Ability</em> … how they can engage visually</p>
 				<p>&#8594; change in skill set</p>
 			</ul>
 			</section>				
-			
 			
 			<section data-background="images/Kirk-hats1.png">	
 			<p style="font-size:180%; color:#000"><i>"Data visualisation is a multi-disciplinary subject"</i></p>		
@@ -166,21 +166,22 @@
 			</section>				
 			
 			<section data-background="images/boat_italian_navy.jpeg">				
-				<h2 style="background-color: rgba(0, 0, 0, 0.5)">Global migration has accelerated and diversified</h2>
+				<h2 style="background-color: rgba(0, 0, 0, 0.5)">Common presumption:</h2>
+				<h2 style="color:#F4EBCE; background-color: rgba(0, 0, 0, 0.5)">Global migration has accelerated and diversified</h2>
 			</section>
 			
 			<section>
-				<h2>Problems with migration data</h2>
-				<p>Gaps in coverage worldwide.</p>
+				<h2>Problems with data on migration flows</h2>
+				<p>Provided by less than 50 countries.</p>
 				<p>Differences in the way of measurement.</p>
-				<p>Harmonised flow data only for Europe</p>
+				<p>Harmonised flow data exist only for Europe</p>
 			</section>			
 			
 			<section>
 				<h2>Data on migrant stocks</h2>
 				<p>Widely captured in population censuses.</p>
 				<p>Country of birth != country of current residence.</p>
-				<p>UNPD released global bilateral dataset in 2013.</p>
+				<p>U.N. released global bilateral dataset in 2013.</p>
 				<p>Accumulative measure that cannot capture recent trends.</p>
 			</section>					
 	
@@ -222,18 +223,25 @@
 				<p>About 0.6 % of world population have moved over 5-year periods since 1995.</p>
 				<img src="images/global-intensity.png"  width="700">
 			</section>
-			
-			<section data-background="images/Table_big1.png">				
-			</section>	
-
-			<section data-background="images/minard_map1.png">				
-			</section>	
-			
-			<section data-background="images/Adam_flowmap1.png">				
+	
+			<section>
+				<img class="stretch" src="images/Table_big1.png">
 			</section>	
 
 			<section>
-				<img src="images/postcard_2005.png" width="680">
+				<img class="stretch" src="images/minard_map1.png">
+			</section>		
+
+			<section>
+				<img class="stretch" src="images/flowmap.png">
+			</section>	
+			
+			<section>
+				<img class="stretch" src="images/circos1.png">
+			</section>	
+
+			<section>
+				<img class="stretch" src="images/postcard_2005.png">
 			</section>
 
 			<section>
@@ -248,7 +256,7 @@
 			</section>		
 
 			<section>	
-				<h2 style="font-size:160%">Teaming up with coders and designers to create <span style="color:#F4EBCE">The Global Flow of People</span></h2>
+				<h2 style="font-size:160%">Teaming up with coders and designers to create<br> <span style="color:#F4EBCE">The Global Flow of People</span></h2>
 				<p>Coding: Null2 in Berlin</p>
 				<p>Web design: Elvira Stein in Vienna</p>
 			</section>
@@ -359,7 +367,7 @@
 			</section>
 
 			<section data-background="images/sciam1.png">
-			</section>					
+			</section>	
 			
 			<section data-background="images/ilo.png">
 			</section>	
