--- a/index.html
+++ b/index.html
@@ -68,18 +68,18 @@
 			<section>
 			<h2>Science communication in the digital era</h2>
 			<p>A late transition from traditional to digital dissemination.</p>
-			<p>Barriers to communication:</p>	
+			<p><em>Barriers</em> to communication:</p>	
 				<ul>
 				<li>Scientists don't get paid for doing outreach</li>
 				<li>Scientists lack the skills to communicate</li>
 				</ul>
 			<br>
-			<p>Science communication needs a change in attitudes.</p>
+			<p>Science communication needs a change in <em>attitudes</em>.</p>
 			</section>			
 			
 			<section>
 			<h2>From informing to engaging the public</h2>
-			<p>More openness in the research process encourages participation and engagement.</p>
+			<p>More <em>openness</em> in the research process encourages participation and engagement.</p>
 			<br>
 			<ul>
 				<li>Open <em>access</em> … to research articles</li>
@@ -106,7 +106,7 @@
 			<section>
 			<h2>The problem is …</h2>
 			<blockquote style="font-size:110%">“Scientists do not seem to distinguish between analysis and communication. The last exploratory graph becomes explanatory.”</blockquote>
-			<p style="text-align:right; font-size: 90%;"Moritz Stefaner, Data Stories Episode 37</p>
+			<p style="text-align:right; font-size: 90%;">Moritz Stefaner, Data Stories Episode 37</p>
 			
 			<div style="width: 100%; overflow: hidden;">
 				<div style="width: 450px; float: left;">
@@ -120,7 +120,7 @@
 			
 			<section>
 			<h2>What skills do we need to engage visually?</h2>
-			<p>Literacy refers to the ability to read for knowledge, write coherently and think critically about printed material.</p>
+			<p><em>Literacy</em> refers to the ability to read for knowledge, write coherently and think critically about printed material.</p>
 			<br>
 			<ul>
 				<li><em>Data</em> literacy … to make use of quantitative information</li>
@@ -371,7 +371,12 @@
 			
 			<section data-background="images/ilo.png">
 			</section>	
-
+			
+			<section data-background="#fff">
+			<h4 style="color:#000">Internal migration in Germany</h4>
+			<iframe src="http://www.german-migration.info/embed.html" width="620px" height="700px" frameborder="0"></iframe>
+			</section>	
+			
 			<section>
 				<h2>Conclusions</h2>
 				<p>Using data visualisation to engage the public works</p>
