--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<h4>The Graphical Web Conference, August 2014</h4>
 				<h4>Slides: <a href="http://www.nikolasander.com/graphicalweb" target="_blank">nikolasander.com/graphicalweb</a></h4>
 			
-				<aside class="notes">some notes. Hidden in presentation but visible on the screen, hit 's' on keyboard</aside>
+			<aside class="notes">joint paper <br> researchers perspective on dataviz</aside>
 			</section>
 
 			<section data-background="images/circular-world.png">	
