change stretch image to background

--- a/index.html
+++ b/index.html
@@ -248,24 +248,20 @@
 				<img src="images/global-intensity.png"  width="700">
 			</section>
 	
-			<section>
-				<img class="stretch" src="images/Table_big1.png">
+			<section data-background="images/Table_big1.png">
 			</section>	
 
-			<section>
-				<img class="stretch" src="images/minard_map1.png">
+			<section data-background="images/minard_map1.png">
 			</section>		
 
-			<section>
-				<img class="stretch" src="images/flowmap.png">
+			<section data-background="images/flowmap.png">
 			</section>	
 			
-			<section>
-				<img class="stretch" src="images/circos1.png">
+			<section data-background="images/circos1.png">
 			</section>	
 
 			<section>
-				<img class="stretch" src="images/postcard_2005.png">
+				<img width="700" src="images/postcard_2005.png">
 			</section>
 
 			<section>
